--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vuedoc/parser",
-  "version": "4.0.0-beta12",
+  "name": "@webfansplz/vuedoc-parser",
+  "version": "0.0.1",
   "description": "Generate a JSON documentation for a Vue file",
   "type": "module",
   "exports": {
@@ -48,10 +48,6 @@
     "lint": "eslint .",
     "gimtoc": "gimtoc -f README.md -s 'Table of Contents' -o README.md"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/vuedoc/parser.git"
-  },
   "keywords": [
     "vuedoc",
     "vuefile",
@@ -59,38 +55,7 @@
     "doc",
     "parser"
   ],
-  "author": "Sébastien Demanou",
-  "contributors": [
-    {
-      "name": "Sébastien Demanou",
-      "url": "https://gitlab.com/demsking"
-    },
-    {
-      "name": "Patrick Schmiedel",
-      "url": "https://github.com/pschmiedel"
-    },
-    {
-      "name": "Devon Rueckner",
-      "url": "https://github.com/indirectlylit"
-    },
-    {
-      "name": "Hello Deadline",
-      "url": "https://github.com/HelloDeadline"
-    },
-    {
-      "name": "Magali Boizot-Roche",
-      "url": "https://github.com/magali-br"
-    },
-    {
-      "name": "Rmaiy",
-      "url": "https://github.com/ljwrer"
-    }
-  ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://gitlab.com/vuedoc/parser/issues"
-  },
-  "homepage": "https://gitlab.com/vuedoc/parser",
   "dependencies": {
     "@b613/utils": "^1.0.0-beta21",
     "@babel/parser": "^7.18.11",
